fix UserService